objects/vlocity_ins__ServicePoint__c.object
<CustomObject>
    <description>An entry point for services to a premises. The service provided to each service point is separately metered (or measured). Useful for fixed line services including energy and utility services.</description>
    <fields>
        <fullName>vlocity_ins__ActivationDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__MeterId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Meter</label>
        <referenceTo>vlocity_ins__InventoryItem__c</referenceTo>
        <relationshipLabel>Service Points</relationshipLabel>
        <relationshipName>ServicePoints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PremisesId__c</fullName>
        <label>Premises</label>
        <referenceTo>vlocity_ins__Premises__c</referenceTo>
        <relationshipLabel>Service Points</relationshipLabel>
        <relationshipName>ServicePoints</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ServicePointNumber__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Service Point Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ServiceType__c</fullName>
        <label>Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Electricity</fullName>
                </value>
                <value>
                    <fullName>Gas</fullName>
                </value>
                <value>
                    <fullName>Water</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Connected</fullName>
                    <default>true</default>
                    <label>Connected</label>
                </value>
                <value>
                    <fullName>Vacant</fullName>
                </value>
                <value>
                    <fullName>Install in Progress</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Service Point</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Service Point Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Points</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>